--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --adre-contacts:rgba(255, 255, 255, 0.6);
     --client-color: #AFB1B8;
     --footer-social-icon:#44454E;
+    
     }
 
     p,h1,h2,h3,h4,h5,h6{
@@ -72,6 +73,8 @@ color: var(--secondary-title-color);
 font-style: normal;
 padding-top: 32px;
 padding-bottom: 32px;
+transition: color 250ms ease;
+position: relative;
 }
 
 /*----------------контакти верхни --------------*/
@@ -90,6 +93,7 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--primery-text-color);
 font-style: normal;
+transition: color 250ms ease;
 }
 /*----------------контакти верхни завершно------------------*/
 .header-conteiner{
@@ -125,13 +129,25 @@ fill: var(--primery-text-color);
 
 .contacts-icon{
 margin-right: 10px;
+transition: color 250ms ease;
 }
 
 .contacts-icon:hover,
 .contacts-icon:focus{
 fill: var(--accent-color);
 }
+.current::after{
+    content:'' ;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    display: block;
+    bottom: 0px;
+}
 /*---------------ховери та фокус------------------*/
+
 .header-contacts-link:hover,.header-link:hover,
 .header-contacts-link:focus,.header-link:focus,.current-link
 {color:var(--accent-color);
@@ -203,6 +219,7 @@ font-family: inherit;
 border-radius: 4px;
 padding: 10px 32px;
 border: none;
+transition: color 250ms ease, background-color 250ms ease;
 }
 
 /*----------------КНОПКА студия------------*/
@@ -299,11 +316,36 @@ flex-wrap: wrap;
 margin-left: -30px;
 margin-top: -30px;
 }
+
+
+
 .representation-item-img{
     margin-left: 30px;
     margin-top: 30px;
     width: calc(100% / 3 -30px);
+    
+    
 }
+.representation-top{
+    position: relative;
+    overflow: hidden;
+   
+    }
+
+.representation-top-text{
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 2;
+    color: var(--primary-title-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 24px 82px;
+    text-transform: uppercase;
+    }
+
 
     /*--------------------четверта секція  команда------*/
 
@@ -393,6 +435,7 @@ height: 44px;
     background-color: var(--primary-title-color);
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms ease, fill 250ms ease;
     }
     .social-link:hover,
     .social-link:focus{
@@ -423,6 +466,7 @@ border: 1px solid #AFB1B8;
 padding-right: 32px;
 padding-left: 32px;
 cursor: pointer;
+transition: background-color 250ms ease, border-color 250ms ease;
 }
 
 .client-item{
@@ -438,13 +482,14 @@ margin-left: 30px;
 width: 100%;
 height: 100%;
 fill: var(--client-color);
+transition: background-color 250ms ease, fill 250ms ease;
 }
-
+/*
  .client-link:hover,
  .client-link:focus {
 fill: var(--accent-color);
  }
- 
+ */
 .client-icon:hover,
 .client-icon:focus{
 fill:var(--accent-color)
@@ -472,10 +517,12 @@ font-style: normal;
 }
 .footer-adres {
 color:var(--primary-title-color);
+transition: color 250ms ease;
 }
 
 .footer-contacts{
 color:var(--adre-contacts);
+transition: color 250ms ease;
 } 
 
 
@@ -529,7 +576,9 @@ height: 44px;
     justify-content: center;
     align-items: center;
     box-shadow:(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: background-color 250ms ease;
     }
+
     .footer-social-link:hover,
     .footer-social-link:focus{
         background-color: var(--accent-color);
@@ -560,6 +609,7 @@ border: none;
 padding: 8px 22px;
 text-align: center;
 border-radius: 4px;
+transition: background-color 250ms ease, color 250ms ease;
 }
 
 .portfolio-button-item:hover{
@@ -571,6 +621,7 @@ border-radius: 4px;
 background-color: var(--accent-color); 
 color: var(--primary-title-color);
 }
+
 .product-name:hover {
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   }
@@ -591,7 +642,9 @@ line-height: 1.71;
 letter-spacing: 0.06em;
 color: var(--secondary-title-color);
 margin-top: 20px;
+
 }
+
 
 .product-list{
 font-weight: 500;
@@ -608,6 +661,68 @@ width: calc(100% / 3 - 30px);
 border-bottom: 1px solid #EEEEEE;
 }
 
+
+.product-name:hover .portfolio-top-text{
+    transform: translateY(0);
+}
+.product-name-top{
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-top-text{
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 2;
+    color: var(--color-btn);
+    background-color: var(--accent-color);
+    position: absolute;
+    top:0;
+    height: 100%;
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+    }
+    
 .product-text{
     padding: 20px 20px;
+}
+
+
+
+/*-----------модальное окно---------------*/
+.backdrop.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+}
+.backdrop{
+    position: fixed;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.6);
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 250ms ease-in-out;
+}
+.modal{
+    width: 500px;
+    min-height: 600px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    position: relative;
+}
+.close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #999999;
 }
