--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,8 @@ margin-right: 50px;
 }
 
 .header-contacts-link{
-    display: flex;
-    align-items: center;
+display: flex;
+align-items: center;
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
@@ -632,10 +632,9 @@ color: var(--primary-title-color);
 
 .product-link:hover,
 .product-link:focus {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    outline: none;
-transform: ;
-  }
+box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+outline: none;
+}
 /*продукд*/
 
 
@@ -675,66 +674,66 @@ border-bottom: 1px solid #EEEEEE;
 
 
 .product-name:hover .portfolio-top-text{
-    transform: translateY(0);
+transform: translateY(0);
 }
 .product-name-top{
-    position: relative;
-    overflow: hidden;
+position: relative;
+overflow: hidden;
 }
 .portfolio-top-text{
-    text-align: left;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 2;
-    color: var(--color-btn);
-    background-color: var(--accent-color);
-    position: absolute;
-    top:0;
-    height: 100%;
-    padding: 63px 24px;
-    transform: translateY(100%);
-    transition: transform 250ms ease;
-    }
+text-align: left;
+font-weight: 400;
+font-size: 14px;
+line-height: 2;
+color: var(--color-btn);
+background-color: var(--accent-color);
+position: absolute;
+top:0;
+height: 100%;
+padding: 63px 24px;
+transform: translateY(100%);
+transition: transform 250ms ease;
+}
     
 .product-text{
-    padding: 20px 20px;
+padding: 20px 20px;
 }
 
 
 
 /*-----------модальное окно---------------*/
 .backdrop.is-hidden{
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
 
 }
 .backdrop{
-    position: fixed;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.6);
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 250ms ease-in-out;
+position: fixed;
+position: absolute;
+width: 100vw;
+height: 100vh;
+background-color: rgba(255, 255, 255, 0.6);
+top: 0;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: opacity 250ms ease-in-out;
 }
 .modal{
-    width: 500px;
-    min-height: 600px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    position: relative;
+min-width: 525px;
+min-height: 581px;
+background-color: #ffffff;
+border-radius: 10px;
+position: relative;
 }
 .close-btn{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #999999;
+position: absolute;
+top: 10px;
+right: 10px;
+background-color: transparent;
+border-radius: 50%;
+width: 30px;
+height: 30px;
+border: 1px solid #999999;
 }
